@@ -15,3 +15,4 @@ from ftw.builder.builder import create
 import ftw.builder.content
 import ftw.builder.group
 import ftw.builder.user
+import ftw.builder.zcml
